# rampage-vpn-client

./: .gitignore  CMakeLists.txt  README.md  README_RU.md  THIRD_PARTY_LICENSES.md  conanfile.py  version.h.in
client/: CMakeLists.txt  amneziaApplication.cpp  main.cpp  rampageApplication.cpp  rampageApplication.h  secureQSettings.cpp  vpnConnection.cpp  vpnConnection.h
client/android/: AndroidManifest.xml  build.gradle  build.gradle.kts
client/android/res/drawable/: ic_launcher_monochrome.xml
client/android/res/values/: strings.xml
client/android/res/values-ru/: strings.xml
client/client_scripts/: clientScripts.qrc  mac_installer.sh
client/cmake/: 3rdparty.cmake  android.cmake  ios.cmake  macos_ne.cmake  sources.cmake
client/containers/: containers_defs.cpp
client/core/configurators/: awgConfigurator.cpp  awgConfigurator.h  configuratorBase.cpp  configuratorBase.h  ikev2Configurator.h  openVpnConfigurator.cpp  openVpnConfigurator.h  wireguardConfigurator.cpp  wireguardConfigurator.h  xrayConfigurator.cpp  xrayConfigurator.h
client/core/controllers/: appSplitTunnelingController.cpp  appSplitTunnelingController.h  connectionController.cpp  connectionController.h  coreController.cpp  coreController.h  coreSignalHandlers.cpp  gatewayController.cpp  gatewayController.h  ipSplitTunnelingController.h  serversController.cpp  serversController.h  settingsController.h  updateController.cpp
client/core/controllers/api/: newsController.cpp  subscriptionController.cpp  subscriptionController.h
client/core/controllers/selfhosted/: exportController.cpp  exportController.h  importController.cpp  importController.h  installController.cpp  installController.h  usersController.cpp  usersController.h
client/core/diagnostics/: containerDiagnostics.h  mtProxyDiagnostics.h
client/core/installers/: awgInstaller.cpp  awgInstaller.h  installerBase.cpp  installerBase.h  mtProxyInstaller.cpp  mtProxyInstaller.h  openvpnInstaller.cpp  openvpnInstaller.h  sftpInstaller.cpp  sftpInstaller.h  socks5Installer.cpp  socks5Installer.h  telemtInstaller.cpp  telemtInstaller.h  torInstaller.cpp  torInstaller.h  wireguardInstaller.cpp  wireguardInstaller.h  xrayInstaller.cpp  xrayInstaller.h
client/core/models/: containerConfig.cpp  containerConfig.h  protocolConfig.cpp  protocolConfig.h  serverDescription.cpp
client/core/models/api/: apiConfig.h  apiV2ServerConfig.cpp  legacyApiServerConfig.cpp
client/core/models/protocols/: awgProtocolConfig.cpp  ikev2ProtocolConfig.cpp  mtProxyProtocolConfig.cpp  mtProxyProtocolConfig.h  openVpnProtocolConfig.cpp  sftpProtocolConfig.cpp  socks5ProxyProtocolConfig.cpp  telemtProtocolConfig.cpp  telemtProtocolConfig.h  torProtocolConfig.cpp  wireGuardProtocolConfig.cpp  xrayProtocolConfig.cpp
client/core/models/selfhosted/: nativeServerConfig.cpp  nativeServerConfig.h  selfHostedAdminServerConfig.cpp  selfHostedUserServerConfig.cpp  selfHostedUserServerConfig.h
client/core/protocols/: androidVpnProtocol.h  ikev2VpnProtocolWindows.h  openVpnProtocol.cpp  openVpnProtocol.h  protocolUtils.cpp  qmlRegisterProtocols.h  vpnProtocol.h  xrayProtocol.cpp  xrayProtocol.h
client/core/repositories/: secureAppSettingsRepository.cpp  secureAppSettingsRepository.h  secureServersRepository.cpp  secureServersRepository.h
client/core/utils/: containerEnum.h  errorCodes.h  errorStrings.cpp  errorStrings.h  ipcClient.cpp  migrations.cpp  osSignalHandler.cpp  protocolEnum.h  rampage_namespace.h  serverConfigUtils.cpp
client/core/utils/api/: apiUtils.cpp  apiUtils.h
client/core/utils/constants/: configKeys.h  protocolConstants.h
client/core/utils/containers/: containerUtils.cpp  containerUtils.h
client/core/utils/selfhosted/: scriptsRegistry.cpp  scriptsRegistry.h  sshClient.cpp  sshClient.h  sshSession.cpp  sshSession.h
client/core/utils/serialization/: inbound.cpp  outbound.cpp  serialization.h  ss.cpp  ssd.cpp  transfer.h  (+4 more)
client/daemon/: daemonlocalserver.cpp
client/images/: RampageVPN_Full_logo.svg.license  images.qrc
client/ios/app/: Info.plist.in  main.entitlements
client/ios/networkextension/: CMakeLists.txt  RampageVPNNetworkExtension.entitlements
client/macos/app/: Info.plist.in  app.entitlements
client/macos/networkextension/: CMakeLists.txt  Info.plist.in  RampageVPNNetworkExtension.entitlements
client/mozilla/: localsocketcontroller.cpp  networkwatcher.cpp
client/server_scripts/: check_server.sh  prepare_host.sh  remove_all_containers.sh  serverScripts.qrc
client/server_scripts/awg/: Dockerfile
client/server_scripts/awg_legacy/: Dockerfile
client/server_scripts/dns/: Dockerfile
client/server_scripts/ipsec/: Dockerfile
client/server_scripts/mtproxy/: Dockerfile  configure_container.sh  run_container.sh  start.sh
client/server_scripts/openvpn/: Dockerfile
client/server_scripts/sftp/: Dockerfile
client/server_scripts/socks5_proxy/: Dockerfile
client/server_scripts/website_tor/: Dockerfile
client/server_scripts/wireguard/: Dockerfile
client/server_scripts/xray/: Dockerfile
client/translations/: amneziavpn_ar_EG.ts  amneziavpn_fa_IR.ts  amneziavpn_hi_IN.ts  amneziavpn_my_MM.ts  amneziavpn_ru_RU.ts  amneziavpn_uk_UA.ts  amneziavpn_ur_PK.ts  amneziavpn_zh_CN.ts
client/ui/controllers/: appSplitTunnelingUiController.cpp  connectionUiController.cpp  connectionUiController.h  importController.cpp  ipSplitTunnelingUiController.cpp  languageUiController.cpp  networkReachabilityController.cpp  networkReachabilityController.h  serversUiController.cpp  serversUiController.h  settingsUiController.cpp  settingsUiController.h
client/ui/models/: appSplitTunnelingModel.cpp  appSplitTunnelingModel.h  clientManagementModel.cpp  clientManagementModel.h  containerProps.h  containersModel.cpp  containersModel.h  protocolsModel.cpp  protocolsModel.h  serversModel.cpp  serversModel.h
client/ui/qml/: main2.qml  qml.qrc
client/ui/utils/: macosUtil.mm  notificationHandler.cpp  qAutoStart.cpp
service/server/: CMakeLists.txt  amneziavpn-service.rc.in  killswitch.cpp  localserver.cpp  systemservice.cpp  xray.cpp  xray_defs.h
(+190 files in other folders)
